Refac: 그룹멤버 삭제 시 유저 아이디 응답 추가
(cherry picked from commit 42d8df64b1bb0599a8661bd37488e3c56f065bef)